Quartz/src/Parser/mod.rs
use super::AST::*;

extern crate nom;
extern crate nom_locate;
use nom_locate::{position, LocatedSpan};

use crate::environment::Environment;
use nom::{branch::alt, bytes::complete::tag, combinator::map, multi::many0, sequence::preceded};
use std::collections::HashSet;

type ParseResult = (Option<Module>, Environment);

type Span<'a> = LocatedSpan<&'a str>;

pub fn parse_program(i: &str) -> ParseResult {
    let input = LocatedSpan::new(i);
    let result = parse_module(input);

    let module = match result {
        Ok((i, module)) => {
            if !i.fragment().is_empty() {
                panic!("Parser Error Parsing {:?}", i.fragment())
            };
            Some(module)
        }
        Err(_) => (None),
    };

    let mut environment = Environment {
        ..Default::default()
    };
    if module.is_some() {
        let module = module.unwrap();
        environment.build(module.clone());
        return (Option::from(module), environment);
    }
    (module, environment)
}

fn parse_module(i: Span) -> nom::IResult<Span, Module> {
    let (i, _) = whitespace(i)?;
    let (i, declarations) = many0(nom::sequence::terminated(
        parse_top_level_declaration,
        whitespace,
    ))(i)?;
    Ok((i, Module { declarations }))
}

fn parse_top_level_declaration(i: Span) -> nom::IResult<Span, TopLevelDeclaration> {
    let (i, top) = alt((
        parse_contract_declaration,
        map(parse_contract_behaviour_declaration, |c| {
            TopLevelDeclaration::ContractBehaviourDeclaration(c)
        }),
        parse_struct_declaration,
        parse_asset_declaration,
        parse_enum_declaration,
        parse_trait_declaration,
    ))(i)?;
    Ok((i, top))
}

fn plus_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("+")(i)?;
    Ok((i, BinOp::Plus))
}

fn parse_comment(i: Span) -> nom::IResult<Span, Span> {
    let (i, _) = tag("//")(i)?;
    let (i, _) = nom::combinator::opt(nom::bytes::complete::is_not("\n"))(i)?;
    let (i, _) = tag("\n")(i)?;
    Ok((i, i))
}

fn minus_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("-")(i)?;
    Ok((i, BinOp::Minus))
}

fn plus_equal_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("+=")(i)?;
    Ok((i, BinOp::PlusEqual))
}

fn minus_equal_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("-=")(i)?;
    Ok((i, BinOp::MinusEqual))
}

fn times_equal_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("*=")(i)?;
    Ok((i, BinOp::TimesEqual))
}

fn divide_equal_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("/=")(i)?;
    Ok((i, BinOp::DivideEqual))
}

fn equal_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("=")(i)?;
    Ok((i, BinOp::Equal))
}

fn dot_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag(".")(i)?;
    Ok((i, BinOp::Dot))
}

fn less_than_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag("<")(i)?;
    Ok((i, BinOp::LessThan))
}

fn greater_than_operator(i: Span) -> nom::IResult<Span, BinOp> {
    let (i, _) = tag(">")(i)?;
    Ok((i, BinOp::GreaterThan))
}

fn left_brace(i: Span) -> nom::IResult<Span, Span> {
    tag("{")(i)
}

fn right_brace(i: Span) -> nom::IResult<Span, Span> {
    tag("}")(i)
}

fn left_square_bracket(i: Span) -> nom::IResult<Span, Span> {
    tag("[")(i)
}

fn right_square_bracket(i: Span) -> nom::IResult<Span, Span> {
    tag("]")(i)
}

fn colon(i: Span) -> nom::IResult<Span, Span> {
    tag(":")(i)
}

fn double_colon(i: Span) -> nom::IResult<Span, Span> {
    tag("::")(i)
}

fn left_parens(i: Span) -> nom::IResult<Span, Span> {
    tag("(")(i)
}

fn right_parens(i: Span) -> nom::IResult<Span, Span> {
    tag(")")(i)
}

fn at(i: Span) -> nom::IResult<Span, Span> {
    tag("@")(i)
}

fn right_arrow(i: Span) -> nom::IResult<Span, Span> {
    tag("->")(i)
}

fn left_arrow(i: Span) -> nom::IResult<Span, Span> {
    tag("<-")(i)
}

fn comma(i: Span) -> nom::IResult<Span, Span> {
    tag(",")(i)
}

fn semi_colon(i: Span) -> nom::IResult<Span, Span> {
    tag(";")(i)
}

fn double_slash(i: Span) -> nom::IResult<Span, Span> {
    tag("//")(i)
}

fn percent(i: Span) -> nom::IResult<Span, Span> {
    tag("//")(i)
}

fn double_dot(i: Span) -> nom::IResult<Span, Span> {
    tag("..")(i)
}

fn ampersand(i: Span) -> nom::IResult<Span, Span> {
    tag("&")(i)
}

fn bang(i: Span) -> nom::IResult<Span, Span> {
    tag("!")(i)
}

fn question(i: Span) -> nom::IResult<Span, Span> {
    tag("?")(i)
}

fn half_open_range(i: Span) -> nom::IResult<Span, Span> {
    tag("..<")(i)
}

fn closed_range(i: Span) -> nom::IResult<Span, Span> {
    tag("...")(i)
}

fn implies(i: Span) -> nom::IResult<Span, Span> {
    tag("==>")(i)
}

fn true_literal(i: Span) -> nom::IResult<Span, Literal> {
    let (i, _) = tag("true")(i)?;
    Ok((i, Literal::BooleanLiteral(true)))
}

fn false_literal(i: Span) -> nom::IResult<Span, Literal> {
    let (i, _) = tag("false")(i)?;
    Ok((i, Literal::BooleanLiteral(false)))
}

fn address_literal(i: Span) -> nom::IResult<Span, Literal> {
    let (i, _) = tag("0x")(i)?;
    let (i, address) = nom::character::complete::hex_digit1(i)?;
    let string = format!("0x{}", address.to_string());
    Ok((i, Literal::AddressLiteral(string)))
}

fn string_literal(i: Span) -> nom::IResult<Span, Literal> {
    let (i, _) = tag("\"")(i)?;
    let (i, string) = nom::bytes::complete::take_until("\"")(i)?;
    let (i, _) = tag("\"")(i)?;
    Ok((i, Literal::StringLiteral(string.to_string())))
}

fn integer(input: Span) -> nom::IResult<Span, Literal> {
    let (i, int) = nom::combinator::map_res(nom::character::complete::digit1, |s: Span| {
        s.fragment().parse::<u64>()
    })(input)?;
    Ok((i, Literal::IntLiteral(int)))
}

fn float(input: Span) -> nom::IResult<Span, Literal> {
    let (i, float) = nom::combinator::map_res(
        nom::combinator::recognize(nom::sequence::delimited(
            nom::character::complete::digit1,
            tag("."),
            nom::character::complete::digit1,
        )),
        |s: Span| s.fragment().parse::<f64>(),
    )(input)?;
    Ok((i, Literal::FloatLiteral(float)))
}

fn parse_identifier(i: Span) -> nom::IResult<Span, Identifier> {
    let line_info = LineInfo {
        line: i.location_line(),
        offset: i.location_offset(),
    };
    let (i, head) = alt((nom::character::complete::alpha1, tag("_")))(i)?;
    let (i, tail) = nom::combinator::recognize(many0(alt((
        nom::character::complete::alphanumeric1,
        tag("_"),
        tag("$"),
    ))))(i)?;
    let head = head.to_string();
    let token = head + tail.fragment();
    let identifier = Identifier {
        token,
        enclosing_type: None,
        line_info,
    };
    Ok((i, identifier))
}

fn parse_identifier_list(i: Span) -> nom::IResult<Span, Vec<Identifier>> {
    nom::multi::separated_list(tag(","), preceded(whitespace, parse_identifier))(i)
}

fn parse_identifier_group(i: Span) -> nom::IResult<Span, Vec<Identifier>> {
    let (i, _) = left_parens(i)?;
    let (i, identifier_list) = parse_identifier_list(i)?;
    let (i, _) = right_parens(i)?;
    Ok((i, identifier_list))
}

fn parse_parameter_list(i: Span) -> nom::IResult<Span, Vec<Parameter>> {
    let (i, _) = left_parens(i)?;
    let (i, vector) =
        nom::multi::separated_list(tag(","), preceded(whitespace, parse_parameter))(i)?;
    let (i, _) = right_parens(i)?;
    Ok((i, vector))
}

fn parse_parameter(i: Span) -> nom::IResult<Span, Parameter> {
    let line_info = LineInfo {
        line: i.location_line(),
        offset: i.location_offset(),
    };
    let (i, identifier) = parse_identifier(i)?;
    let (i, type_assigned) = parse_type_annotation(i)?;
    let (i, equal) = nom::combinator::opt(preceded(whitespace, equal_operator))(i)?;
    if equal.is_none() {
        let parameter = Parameter {
            identifier,
            type_assignment: type_assigned.type_assigned,
            expression: None,
            line_info,
        };
        return Ok((i, parameter));
    }
    let (i, expression) = preceded(whitespace, parse_expression)(i)?;
    let parameter = Parameter {
        identifier,
        type_assignment: type_assigned.type_assigned,
        expression: Some(expression),
        line_info,
    };
    Ok((i, parameter))
}

fn parse_type_annotation(i: Span) -> nom::IResult<Span, TypeAnnotation> {
    let (i, colon) = colon(i)?;
    let (i, _) = whitespace(i)?;
    let (i, type_assigned) = preceded(whitespace, parse_type)(i)?;
    let type_annotation = TypeAnnotation {
        type_assigned,
        colon: colon.to_string(),
    };
    Ok((i, type_annotation))
}

fn parse_type(i: Span) -> nom::IResult<Span, Type> {
    alt((
        parse_fixed_array_type,
        parse_array_type,
        parse_dictionary_type,
        parse_self_type,
        parse_basic_type,
        parse_inout_type,
        parse_solidity_type,
        parse_identifier_type,
    ))(i)
}

fn parse_self_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, _) = tag("Self")(i)?;
    Ok((i, Type::SelfType))
}

fn parse_solidity_type(i: Span) -> nom::IResult<Span, Type> {
    alt((
        parse_solidity_type_first_part,
        parse_solidity_type_second_part,
        parse_solidity_type_third_part,
        parse_solidity_type_fourth_part,
        parse_solidity_type_fifth_part,
        map(tag("address"), |_| Type::Solidity(SolidityType::address)),
        map(tag("string"), |_| Type::Solidity(SolidityType::string)),
        map(tag("bool"), |_| Type::Solidity(SolidityType::bool)),
    ))(i)
}

fn parse_solidity_type_first_part(i: Span) -> nom::IResult<Span, Type> {
    alt((
        map(tag("int8"), |_| Type::Solidity(SolidityType::int8)),
        map(tag("int16"), |_| Type::Solidity(SolidityType::int16)),
        map(tag("int24"), |_| Type::Solidity(SolidityType::int24)),
        map(tag("int32"), |_| Type::Solidity(SolidityType::int32)),
        map(tag("int40"), |_| Type::Solidity(SolidityType::int40)),
        map(tag("int48"), |_| Type::Solidity(SolidityType::int48)),
        map(tag("int56"), |_| Type::Solidity(SolidityType::int56)),
        map(tag("int64"), |_| Type::Solidity(SolidityType::int64)),
        map(tag("int72"), |_| Type::Solidity(SolidityType::int72)),
        map(tag("int80"), |_| Type::Solidity(SolidityType::int80)),
        map(tag("int88"), |_| Type::Solidity(SolidityType::int88)),
        map(tag("int96"), |_| Type::Solidity(SolidityType::int96)),
        map(tag("int104"), |_| Type::Solidity(SolidityType::int104)),
        map(tag("int112"), |_| Type::Solidity(SolidityType::int112)),
        map(tag("int120"), |_| Type::Solidity(SolidityType::int120)),
    ))(i)
}

fn parse_solidity_type_second_part(i: Span) -> nom::IResult<Span, Type> {
    alt((
        map(tag("int128"), |_| Type::Solidity(SolidityType::int128)),
        map(tag("int136"), |_| Type::Solidity(SolidityType::int136)),
        map(tag("int144"), |_| Type::Solidity(SolidityType::int144)),
        map(tag("int152"), |_| Type::Solidity(SolidityType::int152)),
        map(tag("int160"), |_| Type::Solidity(SolidityType::int160)),
        map(tag("int168"), |_| Type::Solidity(SolidityType::int168)),
        map(tag("int176"), |_| Type::Solidity(SolidityType::int176)),
        map(tag("int184"), |_| Type::Solidity(SolidityType::int184)),
        map(tag("int192"), |_| Type::Solidity(SolidityType::int192)),
        map(tag("int200"), |_| Type::Solidity(SolidityType::int200)),
        map(tag("int208"), |_| Type::Solidity(SolidityType::int208)),
        map(tag("int216"), |_| Type::Solidity(SolidityType::int216)),
        map(tag("int224"), |_| Type::Solidity(SolidityType::int224)),
        map(tag("int232"), |_| Type::Solidity(SolidityType::int232)),
    ))(i)
}

fn parse_solidity_type_third_part(i: Span) -> nom::IResult<Span, Type> {
    alt((
        map(tag("int240"), |_| Type::Solidity(SolidityType::int240)),
        map(tag("int248"), |_| Type::Solidity(SolidityType::int248)),
        map(tag("int256"), |_| Type::Solidity(SolidityType::int256)),
        map(tag("uint8"), |_| Type::Solidity(SolidityType::uint8)),
        map(tag("uint16"), |_| Type::Solidity(SolidityType::uint16)),
        map(tag("uint24"), |_| Type::Solidity(SolidityType::uint24)),
        map(tag("uint32"), |_| Type::Solidity(SolidityType::uint32)),
        map(tag("uint40"), |_| Type::Solidity(SolidityType::uint40)),
        map(tag("uint48"), |_| Type::Solidity(SolidityType::uint48)),
        map(tag("uint56"), |_| Type::Solidity(SolidityType::uint56)),
        map(tag("uint64"), |_| Type::Solidity(SolidityType::uint64)),
        map(tag("uint72"), |_| Type::Solidity(SolidityType::uint72)),
        map(tag("uint80"), |_| Type::Solidity(SolidityType::uint80)),
        map(tag("uint88"), |_| Type::Solidity(SolidityType::uint88)),
    ))(i)
}

fn parse_solidity_type_fourth_part(i: Span) -> nom::IResult<Span, Type> {
    alt((
        map(tag("uint96"), |_| Type::Solidity(SolidityType::uint96)),
        map(tag("uint104"), |_| Type::Solidity(SolidityType::uint104)),
        map(tag("uint112"), |_| Type::Solidity(SolidityType::uint112)),
        map(tag("uint120"), |_| Type::Solidity(SolidityType::uint120)),
        map(tag("uint128"), |_| Type::Solidity(SolidityType::uint128)),
        map(tag("uint136"), |_| Type::Solidity(SolidityType::uint136)),
        map(tag("uint144"), |_| Type::Solidity(SolidityType::uint144)),
        map(tag("uint152"), |_| Type::Solidity(SolidityType::uint152)),
        map(tag("uint160"), |_| Type::Solidity(SolidityType::uint160)),
        map(tag("uint168"), |_| Type::Solidity(SolidityType::uint168)),
        map(tag("uint176"), |_| Type::Solidity(SolidityType::uint176)),
        map(tag("uint184"), |_| Type::Solidity(SolidityType::uint184)),
    ))(i)
}

fn parse_solidity_type_fifth_part(i: Span) -> nom::IResult<Span, Type> {
    alt((
        map(tag("uint192"), |_| Type::Solidity(SolidityType::uint192)),
        map(tag("uint200"), |_| Type::Solidity(SolidityType::uint200)),
        map(tag("uint208"), |_| Type::Solidity(SolidityType::uint208)),
        map(tag("uint216"), |_| Type::Solidity(SolidityType::uint216)),
        map(tag("uint224"), |_| Type::Solidity(SolidityType::uint224)),
        map(tag("uint232"), |_| Type::Solidity(SolidityType::uint232)),
        map(tag("uint240"), |_| Type::Solidity(SolidityType::uint240)),
        map(tag("uint248"), |_| Type::Solidity(SolidityType::uint248)),
        map(tag("uint256"), |_| Type::Solidity(SolidityType::uint256)),
    ))(i)
}

fn parse_identifier_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, identifier) = parse_identifier(i)?;
    if is_basic_type(identifier.token.as_str()) {
        let basic_type = match identifier.token.as_str() {
            "Int" => Type::Int,
            "Address" => Type::Address,
            "Bool" => Type::Bool,
            _ => Type::Address,
        };
        return Ok((i, basic_type));
    }
    Ok((i, Type::UserDefinedType(identifier)))
}

fn parse_fixed_array_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, identifier) = parse_identifier_type(i)?;
    let (i, literal) =
        nom::sequence::delimited(left_square_bracket, integer, right_square_bracket)(i)?;

    let size = match literal {
        Literal::IntLiteral(i) => i,
        _ => unimplemented!(),
    };

    let fixed_sized_array_type = FixedSizedArrayType {
        key_type: Box::new(identifier),
        size: size,
    };
    Ok((i, Type::FixedSizedArrayType(fixed_sized_array_type)))
}

fn parse_inout_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, _) = tag("inout")(i)?;
    let (i, _) = whitespace(i)?;
    let (i, key_type) = parse_type(i)?;
    let inout_type = InoutType {
        key_type: Box::new(key_type),
    };
    Ok((i, Type::InoutType(inout_type)))
}

fn parse_array_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, key_type) =
        nom::sequence::delimited(left_square_bracket, parse_type, right_square_bracket)(i)?;
    let array_type = ArrayType {
        key_type: Box::new(key_type),
    };
    Ok((i, Type::ArrayType(array_type)))
}

fn parse_dictionary_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, _) = left_square_bracket(i)?;
    let (i, key_type) = parse_type(i)?;
    let (i, _) = colon(i)?;
    let (i, _) = whitespace(i)?;
    let (i, value_type) = parse_type(i)?;
    let (i, _) = right_square_bracket(i)?;
    let dictionary_type = DictionaryType {
        key_type: Box::new(key_type),
        value_type: Box::new(value_type),
    };
    Ok((i, Type::DictionaryType(dictionary_type)))
}

fn parse_basic_type(i: Span) -> nom::IResult<Span, Type> {
    let (i, base_type) = alt((
        map(tag("Bool"), |_| Type::Bool),
        map(tag("Int"), |_| Type::Int),
        map(tag("String"), |_| Type::String),
        map(tag("Address"), |_| Type::Address),
    ))(i)?;
    Ok((i, base_type))
}
pub fn parse_expression(i: Span) -> nom::IResult<Span, Expression> {
    alt((
        map(parse_inout_expression, |inout| {
            Expression::InoutExpression(inout)
        }),
        map(parse_external_call, |e| Expression::ExternalCall(e)),
        map(parse_cast_expression, |c| Expression::CastExpression(c)),
        map(parse_binary_expression, |be| {
            Expression::BinaryExpression(be)
        }),
        map(tag("self"), |_| Expression::SelfExpression),
        map(parse_subscript_expression, |s| {
            Expression::SubscriptExpression(s)
        }),
        map(parse_function_call, |f| Expression::FunctionCall(f)),
        map(parse_variable_declaration, |v| {
            Expression::VariableDeclaration(v)
        }),
        map(parse_literal, |l| Expression::Literal(l)),
        map(parse_identifier, |i| Expression::Identifier(i)),
        map(parse_bracketed_expression, |b| {
            Expression::BracketedExpression(b)
        }),
        map(parse_array_literal, |a| Expression::ArrayLiteral(a)),
        map(parse_dictionary_literal, |d| {
            Expression::DictionaryLiteral(d)
        }),
        map(parse_dictionary_empty_literal, |d| {
            Expression::DictionaryLiteral(d)
        }),
        map(parse_range_expression, |r| Expression::RangeExpression(r)),
    ))(i)
}

fn parse_expression_left(i: Span) -> nom::IResult<Span, Expression> {
    alt((
        map(parse_inout_expression, |inout| {
            Expression::InoutExpression(inout)
        }),
        map(parse_external_call, |e| Expression::ExternalCall(e)),
        map(parse_cast_expression, |c| Expression::CastExpression(c)),
        map(tag("self"), |_| Expression::SelfExpression),
        map(parse_subscript_expression, |s| {
            Expression::SubscriptExpression(s)
        }),
        map(parse_function_call, |f| Expression::FunctionCall(f)),
        map(parse_variable_declaration, |v| {
            Expression::VariableDeclaration(v)
        }),
        map(parse_literal, |l| Expression::Literal(l)),
        map(parse_identifier, |i| Expression::Identifier(i)),
        map(parse_bracketed_expression, |b| {
            Expression::BracketedExpression(b)
        }),
        map(parse_array_literal, |a| Expression::ArrayLiteral(a)),
        map(parse_dictionary_empty_literal, |a| {
            Expression::DictionaryLiteral(a)
        }),
        map(parse_range_expression, |r| Expression::RangeExpression(r)),
    ))(i)
}

fn parse_subscript_expression(i: Span) -> nom::IResult<Span, SubscriptExpression> {
    let (i, identifier) = parse_identifier(i)?;
    let (i, _) = left_square_bracket(i)?;
    let (i, expression) = parse_expression(i)?;
    let (i, _) = right_square_bracket(i)?;
    let subscript_expression = SubscriptExpression {
        base_expression: identifier,
        index_expression: Box::new(expression),
    };
    Ok((i, subscript_expression))
}

fn parse_range_expression(i: Span) -> nom::IResult<Span, RangeExpression> {
    let (i, _) = left_parens(i)?;
    let (i, start_literal) = parse_literal(i)?;
    let (i, op) = alt((half_open_range, closed_range))(i)?;
    let (i, end_literal) = parse_literal(i)?;
    let (i, _) = right_parens(i)?;
    let range_expression = RangeExpression {
        start_expression: Box::new(Expression::Literal(start_literal)),
        end_expression: Box::new(Expression::Literal(end_literal)),
        op: op.to_string(),
    };
    Ok((i, range_expression))
}

fn parse_cast_expression(i: Span) -> nom::IResult<Span, CastExpression> {
    let (i, _) = tag("cast")(i)?;
    let (i, _) = whitespace(i)?;
    let (i, expression) = parse_expression(i)?;
    let (i, _) = whitespace(i)?;
    let (i, _) = tag("to")(i)?;
    let (i, _) = whitespace(i)?;
    let (i, cast_type) = parse_type(i)?;
    let cast_expression = CastExpression {
        expression: Box::new(expression),
        cast_type: cast_type,
    };
    Ok((i, cast_expression))
}

fn parse_dictionary_empty_literal(i: Span) -> nom::IResult<Span, DictionaryLiteral> {
    let (i, _) = left_square_bracket(i)?;
    let (i, _) = colon(i)?;
    let (i, _) = right_square_bracket(i)?;
    Ok((i, DictionaryLiteral { elements: vec![] }))
}

fn parse_dictionary_literal(i: Span) -> nom::IResult<Span, DictionaryLiteral> {
    let (i, elements) = nom::multi::separated_nonempty_list(
        tag(","),
        nom::sequence::terminated(
            preceded(nom::character::complete::space0, parse_dictionary_element),
            nom::character::complete::space0,
        ),
    )(i)?;
    Ok((i, DictionaryLiteral { elements }))
}

fn parse_dictionary_element(i: Span) -> nom::IResult<Span, (Expression, Expression)> {
    let (i, expression1) = parse_expression_left(i)?;
    let (i, _) = colon(i)?;
    let (i, expression2) = parse_expression(i)?;
    Ok((i, (expression1, expression2)))
}

pub fn parse_array_literal(i: Span) -> nom::IResult<Span, ArrayLiteral> {
    let (i, _) = left_square_bracket(i)?;
    let (i, expressions) = nom::multi::separated_list(
        tag(","),
        nom::sequence::terminated(
            preceded(nom::character::complete::space0, parse_expression),
            nom::character::complete::space0,
        ),
    )(i)?;
    let (i, _) = right_square_bracket(i)?;
    let array_literal = ArrayLiteral {
        elements: expressions,
    };
    Ok((i, array_literal))
}

fn parse_literal(i: Span) -> nom::IResult<Span, Literal> {
    alt((
        address_literal,
        parse_boolean_literal,
        integer,
        float,
        string_literal,
    ))(i)
}

fn parse_boolean_literal(i: Span) -> nom::IResult<Span, Literal> {
    alt((true_literal, false_literal))(i)
}

fn parse_external_call(i: Span) -> nom::IResult<Span, ExternalCall> {
    let (i, _) = tag("call")(i)?;
    let (i, _) = whitespace(i)?;
    let function_arguments = vec![];
    let (i, function_call) = parse_binary_expression(i)?;
    let external_call = ExternalCall {
        arguments: function_arguments,
        function_call,
        external_trait_name: None,
    };
    Ok((i, external_call))
}

pub fn parse_function_call(i: Span) -> nom::IResult<Span, FunctionCall> {
    let (i, identifier) = parse_identifier(i)?;
    let (i, arguments) = parse_function_call_arguments(i)?;
    let function_call = FunctionCall {
        identifier,
        arguments,
        mangled_identifier: None,
    };
    Ok((i, function_call))
}

pub fn parse_function_call_arguments(i: Span) -> nom::IResult<Span, Vec<FunctionArgument>> {
    let (i, _) = left_parens(i)?;
    let (i, arguments) = nom::multi::separated_list(
        tag(","),
        preceded(whitespace, parse_function_call_argument),
    )(i)?;
    let (i, _) = whitespace(i)?;
    let (i, _) = right_parens(i)?;
    Ok((i, arguments))
}

pub fn parse_function_call_argument(i: Span) -> nom::IResult<Span, FunctionArgument> {
    alt((
        map(
            nom::sequence::separated_pair(
                parse_identifier,
                colon,
                preceded(whitespace, parse_expression),
            ),
            |(i, e)| FunctionArgument {
                identifier: Some(i),
                expression: e,
            },
        ),
        map(parse_expression, |e| FunctionArgument {
            identifier: None,
            expression: e,
        }),
    ))(i)
}

pub fn whitespace(i: Span) -> nom::IResult<Span, Span> {
    let (i, _) = many0(alt((
        nom::character::complete::space1,
        nom::character::complete::line_ending,
        parse_comment,
    )))(i)?;
    Ok((i, LocatedSpan::new("")))
}

fn multi_whitespace(i: Span) -> nom::IResult<Span, Span> {
    let (i, _) = many0(alt((nom::character::complete::multispace1, parse_comment)))(i)?;
    Ok((i, LocatedSpan::new("")))
}

fn parse_inout_expression(i: Span) -> nom::IResult<Span, InoutExpression> {
    let (i, _) = ampersand(i)?;
    let (i, expression) = parse_expression(i)?;
    let inout_expression = InoutExpression {
        ampersand_token: "&".to_string(),
        expression: Box::new(expression),
    };
    Ok((i, inout_expression))
}

fn parse_bracketed_expression(i: Span) -> nom::IResult<Span, BracketedExpression> {
    let (i, _) = left_parens(i)?;
    let (i, expression) = parse_expression(i)?;
    let (i, _) = right_parens(i)?;
    let bracketed_expression = BracketedExpression {
        expression: Box::new(expression),
    };
    Ok((i, bracketed_expression))
}

fn parse_attempt_expression(i: Span) -> nom::IResult<Span, AttemptExpression> {
    let (i, _) = tag("try")(i)?;
    let (i, kind) = alt((bang, question))(i)?;
    let (i, function_call) = parse_function_call(i)?;
    let attempt_expression = AttemptExpression {
        kind: kind.fragment().to_string(),
        function_call,
    };
    Ok((i, attempt_expression))
}

fn parse_binary_expression(input: Span) -> nom::IResult<Span, BinaryExpression> {
    let (i, lhs_expression) = parse_expression_left(input)?;
    let (_, op) = preceded(whitespace, parse_binary_op)(i)?;
    let (i, expression) = parse_binary_expression_precedence(input, 0)?;
    if let Expression::BinaryExpression(b) = expression {
        return Ok((i, b));
    } else {
        unimplemented!()
    }
}

pub fn parse_binary_expression_precedence(
    i: Span,
    operator_precedence: i32,
) -> nom::IResult<Span, Expression> {
    let line_info = LineInfo {
        line: i.location_line(),
        offset: i.location_offset(),
    };
    let (i, lhs_expression) = parse_expression_left(i)?;
    let mut lhs_expression = lhs_expression;
    let mut result = lhs_expression.clone();
    let mut input = i;
    loop {
        let (i, op) = nom::combinator::opt(preceded(whitespace, parse_binary_op))(input)?;
        if op.is_none() {
            break;
        }
        let op = op.unwrap();
        let current_precedence = get_operator_precedence(&op);
        if current_precedence < operator_precedence {
            break;
        }
